update default jvm args on java 24